crates/sotf-plugins/tests/snapshots/render_plan_snapshots__ab_compare__ab_compare__ipad_portrait.snap
---
source: crates/sotf-plugins/tests/render_plan_snapshots.rs
expression: plan
---
{
  "plugin_type": "ab_compare",
  "width": 768.0,
  "design_language": "neutral",
  "corner_radius_md": 8.0,
  "min_touch_target": 32.0,
  "toggle_variant": "capsule",
  "label_position": "below",
  "orientation": "horizontal",
  "knob_size": "sm",
  "group_direction": "row",
  "slider_height": 180.0,
  "show_visualizations": true,
  "columns_visible": [
    "main"
  ],
  "columns_collapsed": [],
  "visible_group_ids": [
    "A/B MIX",
    "PHASE",
    "AUTO GAIN"
  ],
  "overflow_group_ids": [],
  "config_controls": [],
  "main_groups": [
    {
      "id": "A/B MIX",
      "title": "A/B MIX",
      "controls": [
        {
          "param_index": 0,
          "param_name": "Mix (A/B)",
          "control_type": "vertical_slider",
          "unit": "",
          "range": [
            -1.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 1,
          "param_name": "Mix Mode",
          "control_type": "button_set",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 2,
          "param_name": "Selected Path",
          "control_type": "button_set",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 3,
          "param_name": "Bypass",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 13,
          "param_name": "Difference Mode",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 8,
          "param_name": "Mix Transition",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            1.0,
            500.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "PHASE",
      "title": "PHASE",
      "controls": [
        {
          "param_index": 11,
          "param_name": "Phase Invert A",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 12,
          "param_name": "Phase Invert B",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        }
      ]
    },
    {
      "id": "AUTO GAIN",
      "title": "AUTO GAIN",
      "controls": [
        {
          "param_index": 4,
          "param_name": "Auto Gain",
          "control_type": "toggle",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 5,
          "param_name": "Loudness Type",
          "control_type": "selector",
          "unit": "",
          "range": [
            0.0,
            1.0
          ],
          "read_only": false
        },
        {
          "param_index": 6,
          "param_name": "Max Auto Gain",
          "control_type": "knob",
          "unit": "dB",
          "range": [
            0.0,
            24.0
          ],
          "read_only": false
        },
        {
          "param_index": 7,
          "param_name": "Gain Smoothing",
          "control_type": "knob",
          "unit": "ms",
          "range": [
            1.0,
            500.0
          ],
          "read_only": false
        }
      ]
    }
  ],
  "output_controls": [],
  "tabs": [
    {
      "name": "Paths",
      "controls": [
        {
          "param_index": 9,
          "param_name": "Path A Config",
          "control_type": "file_picker",
          "unit": "",
          "range": null,
          "read_only": false
        },
        {
          "param_index": 10,
          "param_name": "Path B Config",
          "control_type": "file_picker",
          "unit": "",
          "range": null,
          "read_only": false
        }
      ]
    }
  ],
  "viz_slots": [],
  "dynamic_sections": []
}
